--- a/data_analysis/bike-stats.ipynb
+++ b/data_analysis/bike-stats.ipynb
@@ -1676,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1685,13 +1685,14 @@
        "'The average trip duration is - 1178.3'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f'The average trip duration is - {round(trip_df[\"tripduration\"].mean(), 2)}'"
+    "avg_trip_duration = trip_df[\"tripduration\"].mean()\n",
+    "f'The average trip duration is - {round(avg_trip_duration, 2)}'"
    ]
   },
   {
@@ -1703,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1712,7 +1713,7 @@
        "'The most common bicycle-sharer age - 33'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1720,7 +1721,8 @@
    "source": [
     "now = datetime.datetime.now()\n",
     "avg_rider_birthyear = round(trip_df[\"birthyear\"].mode()[0])\n",
-    "f'The most common bicycle-sharer age - {now.year - avg_rider_birthyear}'"
+    "most_common_age = now.year - avg_rider_birthyear\n",
+    "f'The most common bicycle-sharer age - {most_common_age}'"
    ]
   },
   {
@@ -1732,44 +1734,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Average precipitation per month is 1.32'"
+       "'Average precipitation per month is 3.15'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "avg_precip = weather_df['Precipitation_In'].mean()\n",
-    "f'Average precipitation per month is {round(avg_precip, 2) * 12}'"
+    "# Set date as the index for DF\n",
+    "indexed_weather_df = weather_df.set_index(pd.to_datetime(weather_df['Date'], format='%m/%d/%Y'))\n",
+    "\n",
+    "# Group precip by month\n",
+    "grouped_weather_df = indexed_weather_df.groupby([pd.Grouper(freq='M')])['Precipitation_In'].sum()\n",
+    "\n",
+    "# Find avg precip\n",
+    "avg_precip = grouped_weather_df.mean()\n",
+    "\n",
+    "f'Average precipitation per month is {round(avg_precip, 2)}'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Median precipitation is 0.0'"
+       "'Median precipitation per month is 2.19'"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "median_precip = weather_df['Precipitation_In'].median()\n",
-    "f'Median precipitation is {round(median_precip, 2)}'\n"
+    "median_precip = grouped_weather_df.median()\n",
+    "f'Median precipitation per month is {round(median_precip, 2)}'"
    ]
   },
   {
@@ -1781,81 +1791,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "station_id\n",
-       "BT-01     18\n",
-       "BT-03     16\n",
-       "BT-04     16\n",
-       "BT-05     14\n",
-       "CBD-03    20\n",
-       "CBD-04    18\n",
-       "CBD-05    20\n",
-       "CBD-06    18\n",
-       "CBD-07    20\n",
-       "CBD-13    18\n",
-       "CD-01      0\n",
-       "CH-01     16\n",
-       "CH-02     20\n",
-       "CH-03     16\n",
-       "CH-05     16\n",
-       "CH-06     16\n",
-       "CH-07     18\n",
-       "CH-08     26\n",
-       "CH-09     16\n",
-       "CH-12     14\n",
-       "CH-15     16\n",
-       "CH-16     18\n",
-       "DPD-01    18\n",
-       "DPD-03    24\n",
-       "EL-01     16\n",
-       "EL-03     18\n",
-       "EL-05     18\n",
-       "FH-01      0\n",
-       "FH-04     20\n",
-       "ID-04     16\n",
-       "PS-04     18\n",
-       "PS-05     18\n",
-       "SLU-01    20\n",
-       "SLU-02    18\n",
-       "SLU-04    18\n",
-       "SLU-07    18\n",
-       "SLU-15    20\n",
-       "SLU-16    20\n",
-       "SLU-17    16\n",
-       "SLU-18     0\n",
-       "SLU-19    16\n",
-       "SLU-20    20\n",
-       "SLU-21    20\n",
-       "SLU-22    18\n",
-       "UD-01     18\n",
-       "UD-02     18\n",
-       "UD-04     16\n",
-       "UD-07     16\n",
-       "UW-01      0\n",
-       "UW-02     14\n",
-       "UW-04     16\n",
-       "UW-06     14\n",
-       "UW-07     14\n",
-       "UW-10     16\n",
-       "UW-11     16\n",
-       "WF-01     24\n",
-       "WF-03     18\n",
-       "WF-04     18\n",
-       "Name: current_dockcount, dtype: int64"
+       "'The average number of bikes per station is 16.52'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "station_df.groupby('station_id')['current_dockcount'].mean()"
+    "number_of_bikes_per_station = station_df.groupby('station_id')['current_dockcount'].sum()\n",
+    "avg_number_of_bikes = number_of_bikes_per_station.mean()\n",
+    "\n",
+    "f'The average number of bikes per station is {round(avg_number_of_bikes, 2)}'"
    ]
   },
   {
@@ -1867,7 +1821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1876,16 +1830,20 @@
        "\"It's more likely to lose bikes\""
       ]
      },
-     "execution_count": 61,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filt_increase_number_of_bikes = station_df['current_dockcount'] > station_df['install_dockcount']\n",
-    "filt_decrease_number_of_bikes = station_df['current_dockcount'] < station_df['install_dockcount']\n",
-    "avg_increase = len(station_df[filt_increase_number_of_bikes]) - len(station_df[filt_decrease_number_of_bikes])\n",
-    "f'It\\'s more likely to gain bikes' if avg_increase > 0 else f'It\\'s more likely to lose bikes'"
+    "def lose_or_gain(df):\n",
+    "    filt_increase_number_of_bikes = df['current_dockcount'] > df['install_dockcount']\n",
+    "    filt_decrease_number_of_bikes = df['current_dockcount'] < df['install_dockcount']\n",
+    "    avg_increase = len(df[filt_increase_number_of_bikes]) - len(df[filt_decrease_number_of_bikes])\n",
+    "    \n",
+    "    return f'It\\'s more likely to gain bikes' if avg_increase > 0 else f'It\\'s more likely to lose bikes'\n",
+    "\n",
+    "lose_or_gain(station_df)"
    ]
   },
   {
@@ -1897,25 +1855,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Male      140564\n",
-       "Female     37562\n",
-       "Other       3431\n",
-       "Name: gender, dtype: int64"
+       "\"It's more likely for a Male to borrow a bike\""
       ]
      },
-     "execution_count": 70,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trip_df['gender'].value_counts()"
+    "most_comon_gender = trip_df['gender'].value_counts().index[0]\n",
+    "f'It\\'s more likely for a {most_comon_gender} to borrow a bike'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### What's the most popular bike station?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The most popular station is WF-01'"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "most_popular_station = trip_df.groupby('from_station_id').count().sort_values(by='trip_id', ascending=False).index[0]\n",
+    "f'The most popular station is {most_popular_station}'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### What's the percentage of members"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Member                    181557\n",
+       "Short-Term Pass Holder    105300\n",
+       "Name: usertype, dtype: int64"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "users = trip_df['usertype'].value_counts()\n",
+    "members = users.loc['Member']\n",
+    "non_members = users.loc['Short-Term Pass Holder']\n",
+    "\n",
+    "percentage_of_members = members * 100 / (members + non_members)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'top_sales_by_genre' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-142-a8f1966d24a5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Success!!!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0mtest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-142-a8f1966d24a5>\u001b[0m in \u001b[0;36mtest\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0massert_equal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmost_comon_gender\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Male'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0massert_equal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmost_popular_station\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'WF-01'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0massert_equal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtop_sales_by_genre\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m21.4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m11.18\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m13.04\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m29.02\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m40.24\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m30.26\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m35.82\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m31.37\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m28.31\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m24.76\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m82.74\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5.45\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m     \u001b[0massert_equal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moldest_game_with_sales_above_avg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mName\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Boxing'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'top_sales_by_genre' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def test():\n",
+    "\n",
+    "    def assert_equal(actual, expected):\n",
+    "        assert actual == expected, f\"Expected {expected} but got {actual}\"\n",
+    "\n",
+    "    assert_equal(round(avg_trip_duration, 2), 1178.3)\n",
+    "    assert_equal(most_common_age, 33)\n",
+    "    assert_equal(round(avg_precip, 2), 3.15)\n",
+    "    assert_equal(round(median_precip, 2), 2.19)\n",
+    "    assert_equal(round(avg_number_of_bikes, 2), 16.52)\n",
+    "    assert_equal(lose_or_gain(station_df), \"It's more likely to lose bikes\")\n",
+    "    assert_equal(most_comon_gender, 'Male')\n",
+    "    assert_equal(most_popular_station, 'WF-01')\n",
+    "    assert_equal(list(top_sales_by_genre), [21.4, 11.18, 13.04, 29.02, 40.24, 30.26, 35.82, 31.37, 28.31, 24.76, 82.74, 5.45])\n",
+    "    assert_equal(oldest_game_with_sales_above_avg.iloc[0].Name, 'Boxing')\n",
+    "    \n",
+    "    \n",
+    "    print(\"Success!!!\")\n",
+    "\n",
+    "test()"
    ]
   },
   {
