--- a/data_analysis/bike-stats.ipynb
+++ b/data_analysis/bike-stats.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "[286857 rows x 12 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
        "[689 rows x 21 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1657,7 +1657,7 @@
        "57                 18               NaN  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1676,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1685,7 +1685,7 @@
        "'The average trip duration is - 1178.3'"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1704,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1713,7 +1713,7 @@
        "'The most common bicycle-sharer age - 33'"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1734,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1743,7 +1743,7 @@
        "'Average precipitation per month is 3.15'"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1763,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1772,7 @@
        "'Median precipitation per month is 2.19'"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1791,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1800,7 +1800,7 @@
        "'The average number of bikes per station is 16.52'"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1821,7 +1821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1830,7 +1830,7 @@
        "\"It's more likely to lose bikes\""
       ]
      },
-     "execution_count": 117,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1855,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1864,7 +1864,7 @@
        "\"It's more likely for a Male to borrow a bike\""
       ]
      },
-     "execution_count": 122,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1883,7 +1883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1892,7 +1892,7 @@
        "'The most popular station is WF-01'"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1911,18 +1911,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Member                    181557\n",
-       "Short-Term Pass Holder    105300\n",
-       "Name: usertype, dtype: int64"
+       "'Percentage of members is 63.29%'"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1932,24 +1930,21 @@
     "members = users.loc['Member']\n",
     "non_members = users.loc['Short-Term Pass Holder']\n",
     "\n",
-    "percentage_of_members = members * 100 / (members + non_members)"
+    "percentage_of_members = round(members * 100 / (members + non_members), 2)\n",
+    "\n",
+    "f'Percentage of members is {percentage_of_members}%'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'top_sales_by_genre' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-142-a8f1966d24a5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Success!!!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0mtest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-142-a8f1966d24a5>\u001b[0m in \u001b[0;36mtest\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0massert_equal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmost_comon_gender\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Male'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0massert_equal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmost_popular_station\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'WF-01'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0massert_equal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtop_sales_by_genre\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m21.4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m11.18\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m13.04\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m29.02\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m40.24\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m30.26\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m35.82\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m31.37\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m28.31\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m24.76\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m82.74\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5.45\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m     \u001b[0massert_equal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moldest_game_with_sales_above_avg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mName\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Boxing'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'top_sales_by_genre' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!!!\n"
      ]
     }
    ],
@@ -1967,8 +1962,7 @@
     "    assert_equal(lose_or_gain(station_df), \"It's more likely to lose bikes\")\n",
     "    assert_equal(most_comon_gender, 'Male')\n",
     "    assert_equal(most_popular_station, 'WF-01')\n",
-    "    assert_equal(list(top_sales_by_genre), [21.4, 11.18, 13.04, 29.02, 40.24, 30.26, 35.82, 31.37, 28.31, 24.76, 82.74, 5.45])\n",
-    "    assert_equal(oldest_game_with_sales_above_avg.iloc[0].Name, 'Boxing')\n",
+    "    assert_equal(percentage_of_members, 63.29)\n",
     "    \n",
     "    \n",
     "    print(\"Success!!!\")\n",
